<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#fff">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Title"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="150dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/num1"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:hint="@string/num1"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="#000" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/num2"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center"
                    android:hint="@string/num2"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColorHint="#000" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/result"
            android:text="@string/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/purple_700"
                    android:onClick="sumar"
                    android:text="@string/suma"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/purple_700"
                    android:onClick="multiplicar"
                    android:text="@string/mult"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/teal_700"
                    android:text="@string/resta"
                    android:onClick="restar"
                    android:layout_marginStart="5dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/teal_700"
                    android:text="@string/division"
                    android:onClick="dividir"
                    android:layout_marginStart="5dp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/teal_700"
                android:text="@string/Limpia"
                android:onClick="limpiar"
                android:layout_marginStart="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Data"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="120dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>